# token-fire

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
agent-docs/: pricing-evidence.md  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: hook_command.rs  mod.rs  source.rs
src-tauri/src/app/: build_identity.rs  debug_bundle.rs  floating_widget.rs  hook_intake.rs  ingest_scheduler.rs  logging.rs  menu.rs  mod.rs  paths.rs  profile_query.rs  release_check.rs  runtime.rs  socket_server.rs  source_diagnostics.rs  source_ingest.rs  source_signals.rs  state.rs  status.rs  tracking.rs  tray.rs  usage_invalidation.rs  widget_events.rs
src-tauri/src/core/: aggregation.rs  day_boundary.rs  dedupe.rs  mod.rs  observation.rs  pricing.rs  profile.rs  profile_rollup.rs  usage_series.rs  usage_store.rs
src-tauri/tests/: build_identity_test.rs  core_usage_store_test.rs  debug_bundle_test.rs  final_v1_gates_test.rs  hook_cli_test.rs  hook_config_test.rs  ingest_scheduler_test.rs  live_ui_and_logging_test.rs  profile_rollup_performance_test.rs  release_check_test.rs  runtime_orchestration_test.rs  runtime_paths_test.rs  source_ingest_router_test.rs  status_and_menu_test.rs  traex_parser_test.rs  traex_resolver_test.rs
src-tauri/tests/fixtures/: claude-transcript.jsonl  codex-hooks.json  codex-session.jsonl  cursor-transcript.jsonl  traecli.toml  traex-session-fallback-id.jsonl  traex-session-filename-id.jsonl  traex-session.jsonl
(+70 files in other folders)
