[package]
name = "token-fire"
version = "0.1.2"
description = "Local Traex token usage widget"
edition = "2021"
rust-version = "1.80"
default-run = "token-fire"

[lib]
name = "token_fire"
path = "src/lib.rs"

[[bin]]
name = "token-fire"
path = "src/main.rs"

[[bin]]
name = "token-fire-hook"
path = "src/bin/token_fire_hook.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
chrono-tz = "0.10"
predicates = "3"
tempfile = "3"
